Update Análisis de pom.md